# ai-gemini-chatbot

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
frontend/: index.html  script.js  styles.css
gen_ai/: __init__.py
gen_ai/prompt/templates/: system_template.txt
src/: main.py
src/controllers/: chat.py
src/exceptions/: custom_exception_handler.py
src/schemas/: chat_schema.py
src/services/: chat_service.py
src/utils/: app_notification_message.py  base.py  connection.py
